[package]
name = "yama"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
config = "0.14.0"
dotenv = "0.15.0"
hnsw_rs = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
